--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.6.1",
     "@trpc/client": "9.27.4",
     "@trpc/next": "9.27.4",
     "@trpc/react": "9.27.4",
@@ -28,6 +29,7 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "postcss": "^8.4.19",
+    "prisma": "^4.6.1",
     "tailwindcss": "^3.2.3",
     "typescript": "4.8.4"
   }
